--- a/contact.html
+++ b/contact.html
@@ -1,169 +1,140 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>تواصل معنا – Khotwa</title>
-  <style>
-    :root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
-    a{color:inherit;text-decoration:none} a:visited{color:inherit}
-    .container{width:min(1120px,92%);margin-inline:auto}
-    :focus-visible{outline:3px solid color-mix(in oklab, var(--primary), #fff 40%);outline-offset:2px;border-radius:8px}
-
-    /* Navbar */
-    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
-    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
-    .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
-    .logo{width:40px;height:40px;object-fit:cover;border-radius:8px;border:1px solid var(--ring)}
-    .nav-links{display:flex;gap:1rem;align-items:center}
-    .nav-links a{padding:.5rem .75rem;border-radius:10px}
-    .nav-links a:hover{background:var(--card)}
-
-    section{padding:2rem 0}
-    .muted{color:var(--muted)}
-    .grid{display:grid;gap:1rem;grid-template-columns:1fr 1fr}
-    @media(max-width:980px){.grid{grid-template-columns:1fr}}
-
-    /* Form */
-    form{display:grid;gap:.9rem;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
-    .field{display:grid;gap:.35rem}
-    label{display:flex;align-items:center;gap:.45rem;font-size:.95rem}
-    .icon{width:18px;height:18px;color:var(--primary);flex:none}
-    input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radius:10px;font:inherit}
-    button{padding:.7rem 1rem;border-radius:10px;border:1px solid var(--ring);background:var(--primary);color:#fff;cursor:pointer;font-weight:600}
-    button:hover{background:var(--primary-600)}
-    iframe{width:100%;height:360px;border:1px solid var(--ring);border-radius:16px}
-
-    /* Popup Notification */
-    .popup{
-      position:fixed;top:20px;right:20px;
-      padding:.9rem 1.2rem;border-radius:10px;
-      font-size:.95rem;font-weight:600;
-      box-shadow:0 4px 18px rgba(0,0,0,.12);
-      display:none;z-index:1000;
-      animation:fadeIn .3s ease;
-    }
-    .popup.success{background:#16a34a;color:#fff}
-    .popup.error{background:#dc2626;color:#fff}
-    @keyframes fadeIn{from{opacity:0;transform:translateY(-10px)}to{opacity:1;transform:translateY(0)}}
-
-    footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
-  </style>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>تواصل – Khotwa</title>
+<style>
+:root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
+*{box-sizing:border-box} html,body{height:100%}
+body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text)}
+a{color:inherit;text-decoration:none} a:visited{color:inherit}
+.container{width:min(1120px,92%);margin-inline:auto}
+.navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
+.nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
+.brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
+.brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
+.nav-links{display:flex;gap:1rem;align-items:center}
+.nav-links a{padding:.5rem .75rem;border-radius:10px}
+.nav-links a:hover{background:var(--card)}
+.lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+section{padding:2rem 0}
+.grid{display:grid;gap:1rem;grid-template-columns:1fr 1fr}
+@media(max-width:980px){.grid{grid-template-columns:1fr}}
+.muted{color:var(--muted)}
+form{display:grid;gap:.9rem;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+.field{display:grid;gap:.35rem}
+label{display:flex;align-items:center;gap:.45rem;font-size:.95rem}
+.icon{width:18px;height:18px;color:var(--primary);flex:none}
+input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radius:10px;font:inherit}
+button{padding:.7rem 1rem;border-radius:10px;border:1px solid var(--ring);background:var(--primary);color:#fff;cursor:pointer;font-weight:600}
+button:hover{background:var(--primary-600)}
+iframe{width:100%;height:360px;border:1px solid var(--ring);border-radius:16px}
+.popup{position:fixed;top:20px;right:20px;padding:.9rem 1.2rem;border-radius:10px;font-weight:600;display:none;z-index:1000;box-shadow:0 4px 18px rgba(0,0,0,.12)}
+.popup.success{background:#16a34a;color:#fff}.popup.error{background:#dc2626;color:#fff}
+footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
+</style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar" aria-label="الشريط العلوي">
-    <div class="container nav-inner">
-      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
-        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo">
-        <span>مجلس طلاب خطوة – La Trobe</span>
-      </a>
-      <div class="nav-links">
-        <a href="/about.html">من نحن</a>
-        <a href="/news.html">الأخبار</a>
-        <a href="/events.html">الفعاليات</a>
-        <a href="/calendar.html">التقويم</a>
-        <a href="/resources.html">الموارد</a>
-        <a href="/contact.html" aria-current="page">تواصل</a>
-      </div>
+<nav class="navbar">
+  <div class="container nav-inner">
+    <a class="brand" href="/index.html">
+      <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="">
+      <span data-lang="ar">مجلس طلاب خطوة – La Trobe</span>
+      <span data-lang="en" hidden>Khotwa Student Council – La Trobe</span>
+    </a>
+    <div class="nav-links">
+      <a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
+      <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
+      <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
+      <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
+      <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden>Resources</span></a>
+      <a href="/contact.html" aria-current="page"><span data-lang="ar">تواصل</span><span data-lang="en" hidden>Contact</span></a>
+      <button id="lang-toggle" class="lang-toggle" type="button">English</button>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <!-- Content -->
-  <main class="container">
-    <section class="grid">
-      <!-- Form -->
-      <div>
-        <h1>راسلنا</h1>
-        <p class="muted">يسعدنا استقبال أسئلتك واقتراحاتك.</p>
+<main class="container">
+  <section class="grid">
+    <div>
+      <h1 data-lang="ar">راسلنا</h1><h1 data-lang="en" hidden>Contact Us</h1>
+      <p class="muted" data-lang="ar">يسعدنا استقبال أسئلتك واقتراحاتك.</p>
+      <p class="muted" data-lang="en" hidden>We’re happy to hear your questions and suggestions.</p>
 
-        <form id="contact-form" action="https://formspree.io/f/mblkegbr" method="POST">
-          <div class="field">
-            <label for="name">
-              <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="7" r="4"/><path d="M5.5 21a6.5 6.5 0 0113 0"/></svg>
-              الاسم الكامل
-            </label>
-            <input id="name" name="name" type="text" placeholder="الاسم الكامل" required>
-          </div>
+      <form id="contact-form" action="https://formspree.io/f/mblkegbr" method="POST">
+        <div class="field">
+          <label for="name">
+            <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="7" r="4"/><path d="M5.5 21a6.5 6.5 0 0113 0"/></svg>
+            <span data-lang="ar">الاسم الكامل</span><span data-lang="en" hidden>Full Name</span>
+          </label>
+          <input id="name" name="name" type="text" placeholder="الاسم / Name" autocomplete="name" required>
+        </div>
 
-          <div class="field">
-            <label for="email">
-              <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 6h16v12H4z"/><path d="M22 6l-10 7L2 6"/></svg>
-              البريد الإلكتروني
-            </label>
-            <input id="email" name="email" type="email" dir="ltr" placeholder="example@email.com" required>
-          </div>
+        <div class="field">
+          <label for="email">
+            <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 6h16v12H4z"/><path d="M22 6l-10 7L2 6"/></svg>
+            <span data-lang="ar">البريد الإلكتروني</span><span data-lang="en" hidden>Email</span>
+          </label>
+          <input id="email" name="email" type="email" dir="ltr" inputmode="email" placeholder="example@email.com" autocomplete="email" required>
+        </div>
 
-          <div class="field">
-            <label for="message">
-              <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12a8 8 0 10-15.5 3.5L3 21l5-1.5A8 8 0 1021 12z"/></svg>
-              رسالتك
-            </label>
-            <textarea id="message" name="message" rows="6" placeholder="اكتب رسالتك هنا" required></textarea>
-          </div>
+        <div class="field">
+          <label for="message">
+            <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 12a8 8 0 10-15.5 3.5L3 21l5-1.5A8 8 0 1021 12z"/></svg>
+            <span data-lang="ar">رسالتك</span><span data-lang="en" hidden>Your Message</span>
+          </label>
+          <textarea id="message" name="message" rows="6" placeholder="..." required></textarea>
+        </div>
 
-          <button type="submit">إرسال</button>
-        </form>
-      </div>
-
-      <!-- Map -->
-      <div>
-        <h2 style="display:flex;align-items:center;gap:.5rem">
-          <svg class="icon" style="width:20px;height:20px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s7-4.35 7-11a7 7 0 10-14 0c0 6.65 7 11 7 11z"/><circle cx="12" cy="11" r="3"/></svg>
-          موقعنا – Bundoora
-        </h2>
-        <p class="muted">La Trobe University – Bundoora Campus</p>
-        <iframe
-          title="خريطة موقع La Trobe University – Bundoora"
-          loading="lazy"
-          src="https://www.google.com/maps?hl=ar&q=La+Trobe+University,+Bundoora&output=embed&t=m&z=15">
-        </iframe>
-      </div>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container" style="display:flex;justify-content:space-between;align-items:center">
-      <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
-      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <button type="submit"><span data-lang="ar">إرسال</span><span data-lang="en" hidden>Send</span></button>
+      </form>
     </div>
-  </footer>
 
-  <!-- Popup -->
-  <div id="popup" class="popup"></div>
+    <div>
+      <h2 style="display:flex;align-items:center;gap:.5rem">
+        <svg class="icon" style="width:20px;height:20px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s7-4.35 7-11a7 7 0 10-14 0c0 6.65 7 11 7 11z"/><circle cx="12" cy="11" r="3"/></svg>
+        <span data-lang="ar">موقعنا – Bundoora</span><span data-lang="en" hidden>Our Location – Bundoora</span>
+      </h2>
+      <p class="muted">La Trobe University – Bundoora Campus</p>
+      <iframe title="La Trobe University – Bundoora" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?hl=ar&q=La+Trobe+University,+Bundoora&output=embed&t=m&z=15"></iframe>
+    </div>
+  </section>
+</main>
 
-  <script>
-    document.getElementById('year').textContent=new Date().getFullYear();
+<footer>
+  <div class="container" style="display:flex;justify-content:space-between;gap:1rem;align-items:center">
+    <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
+    <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
+  </div>
+</footer>
 
-    const form=document.getElementById('contact-form');
-    const popup=document.getElementById('popup');
+<div id="popup" class="popup"></div>
 
-    form.addEventListener('submit',async(e)=>{
-      e.preventDefault();
-      const data=new FormData(form);
-      try{
-        const res=await fetch(form.action,{method:'POST',body:data,headers:{'Accept':'application/json'}});
-        if(res.ok){
-          showPopup("✅ تم إرسال رسالتك بنجاح","success");
-          form.reset();
-        }else{
-          showPopup("❌ حدث خطأ أثناء الإرسال","error");
-        }
-      }catch(err){
-        showPopup("❌ لم نتمكن من الاتصال بالخادم","error");
-      }
-    });
+<script>
+document.getElementById('year').textContent=new Date().getFullYear();
+const t=document.getElementById('lang-toggle');let en=false;
+function setLang(v){en=v;
+  document.querySelectorAll('[data-lang="ar"]').forEach(el=>el.hidden=en);
+  document.querySelectorAll('[data-lang="en"]').forEach(el=>el.hidden=!en);
+  document.documentElement.lang=en?'en':'ar';
+  document.documentElement.dir=en?'ltr':'rtl';
+  t.textContent=en?'العربية':'English';
+}
+t.addEventListener('click',()=>setLang(!en)); setLang(false);
 
-    function showPopup(msg,type){
-      popup.textContent=msg;
-      popup.className="popup "+type;
-      popup.style.display="block";
-      setTimeout(()=>{popup.style.display="none"},4000);
-    }
-  </script>
+// Form + popup
+const form=document.getElementById('contact-form'); const popup=document.getElementById('popup');
+function show(msg,ok=true){popup.textContent=msg;popup.className='popup '+(ok?'success':'error');popup.style.display='block';setTimeout(()=>popup.style.display='none',4000)}
+form.addEventListener('submit',async(e)=>{
+  e.preventDefault();
+  const data=new FormData(form);
+  try{
+    const res=await fetch(form.action,{method:'POST',body:data,headers:{'Accept':'application/json'}});
+    if(res.ok){show(en?'Sent successfully ✅':'تم الإرسال بنجاح ✅',true);form.reset();}
+    else{show(en?'Submission failed ❌':'تعذّر الإرسال ❌',false);}
+  }catch{show(en?'Network error ❌':'خطأ بالشبكة ❌',false);}
+});
+</script>
 </body>
 </html>
