--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text)}
 a{color:inherit;text-decoration:none} a:visited{color:inherit}
 .container{width:min(1120px,92%);margin-inline:auto}
+
 .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
 .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
 .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
@@ -18,10 +19,12 @@ a{color:inherit;text-decoration:none} a:visited{color:inherit}
 .nav-links a{padding:.5rem .75rem;border-radius:10px}
 .nav-links a:hover{background:var(--card)}
 .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+
 section{padding:2rem 0}
 .grid{display:grid;gap:1rem;grid-template-columns:1fr 1fr}
 @media(max-width:980px){.grid{grid-template-columns:1fr}}
 .muted{color:var(--muted)}
+
 form{display:grid;gap:.9rem;background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
 .field{display:grid;gap:.35rem}
 label{display:flex;align-items:center;gap:.45rem;font-size:.95rem}
@@ -29,9 +32,13 @@ label{display:flex;align-items:center;gap:.45rem;font-size:.95rem}
 input,textarea{width:100%;padding:.7rem;border:1px solid var(--ring);border-radius:10px;font:inherit}
 button{padding:.7rem 1rem;border-radius:10px;border:1px solid var(--ring);background:var(--primary);color:#fff;cursor:pointer;font-weight:600}
 button:hover{background:var(--primary-600)}
+
 iframe{width:100%;height:360px;border:1px solid var(--ring);border-radius:16px}
+
 .popup{position:fixed;top:20px;right:20px;padding:.9rem 1.2rem;border-radius:10px;font-weight:600;display:none;z-index:1000;box-shadow:0 4px 18px rgba(0,0,0,.12)}
-.popup.success{background:#16a34a;color:#fff}.popup.error{background:#dc2626;color:#fff}
+.popup.success{background:#16a34a;color:#fff}
+.popup.error{background:#dc2626;color:#fff}
+
 footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
 </style>
 </head>
@@ -39,7 +46,7 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
 <nav class="navbar">
   <div class="container nav-inner">
     <a class="brand" href="/index.html">
-      <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="">
+      <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة – La Trobe">
       <span data-lang="ar">مجلس طلاب خطوة – La Trobe</span>
       <span data-lang="en" hidden>Khotwa Student Council – La Trobe</span>
     </a>
@@ -58,11 +65,14 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
 <main class="container">
   <section class="grid">
     <div>
-      <h1 data-lang="ar">راسلنا</h1><h1 data-lang="en" hidden>Contact Us</h1>
+      <h1 data-lang="ar">راسلنا</h1>
+      <h1 data-lang="en" hidden>Contact Us</h1>
       <p class="muted" data-lang="ar">يسعدنا استقبال أسئلتك واقتراحاتك.</p>
       <p class="muted" data-lang="en" hidden>We’re happy to hear your questions and suggestions.</p>
 
-      <form id="contact-form" action="https://formspree.io/f/mblkegbr" method="POST">
+      <form id="contact-form" action="https://formspree.io/f/mblkegbr" method="POST" novalidate>
+        <input type="hidden" name="_subject" value="رسالة جديدة من موقع المجلس | New message from Khotwa site">
+
         <div class="field">
           <label for="name">
             <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="7" r="4"/><path d="M5.5 21a6.5 6.5 0 0113 0"/></svg>
@@ -87,7 +97,10 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
           <textarea id="message" name="message" rows="6" placeholder="..." required></textarea>
         </div>
 
-        <button type="submit"><span data-lang="ar">إرسال</span><span data-lang="en" hidden>Send</span></button>
+        <button type="submit">
+          <span data-lang="ar">إرسال</span>
+          <span data-lang="en" hidden>Send</span>
+        </button>
       </form>
     </div>
 
@@ -105,35 +118,54 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
 <footer>
   <div class="container" style="display:flex;justify-content:space-between;gap:1rem;align-items:center">
     <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
-    <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
+    <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
   </div>
 </footer>
 
-<div id="popup" class="popup"></div>
+<!-- منبّه مرئي + وصولي -->
+<div id="popup" class="popup" role="status" aria-live="polite"></div>
 
 <script>
-document.getElementById('year').textContent=new Date().getFullYear();
-const t=document.getElementById('lang-toggle');let en=false;
-function setLang(v){en=v;
-  document.querySelectorAll('[data-lang="ar"]').forEach(el=>el.hidden=en);
-  document.querySelectorAll('[data-lang="en"]').forEach(el=>el.hidden=!en);
-  document.documentElement.lang=en?'en':'ar';
-  document.documentElement.dir=en?'ltr':'rtl';
-  t.textContent=en?'العربية':'English';
-}
-t.addEventListener('click',()=>setLang(!en)); setLang(false);
+document.getElementById('year').textContent = new Date().getFullYear();
 
-// Form + popup
-const form=document.getElementById('contact-form'); const popup=document.getElementById('popup');
-function show(msg,ok=true){popup.textContent=msg;popup.className='popup '+(ok?'success':'error');popup.style.display='block';setTimeout(()=>popup.style.display='none',4000)}
-form.addEventListener('submit',async(e)=>{
+// زر اللغة (بدون ما يفضّي الصفحة)
+const toggleBtn = document.getElementById('lang-toggle'); let isEn = false;
+function setLang(en){
+  isEn = en;
+  document.querySelectorAll('[data-lang="ar"]').forEach(el => el.hidden = en);
+  document.querySelectorAll('[data-lang="en"]').forEach(el => el.hidden = !en);
+  document.documentElement.lang = en ? 'en' : 'ar';
+  document.documentElement.dir  = en ? 'ltr' : 'rtl';
+  toggleBtn.textContent = en ? 'العربية' : 'English';
+}
+toggleBtn.addEventListener('click', ()=> setLang(!isEn));
+setLang(false); // يبدأ بالعربي
+
+// معالجة الإرسال + منبّه
+const form  = document.getElementById('contact-form');
+const popup = document.getElementById('popup');
+
+function show(msg, ok=true){
+  popup.textContent = msg;
+  popup.className = 'popup ' + (ok ? 'success' : 'error');
+  popup.style.display = 'block';
+  setTimeout(()=> popup.style.display = 'none', 4000);
+}
+
+form.addEventListener('submit', async (e) => {
   e.preventDefault();
-  const data=new FormData(form);
+  const data = new FormData(form);
   try{
-    const res=await fetch(form.action,{method:'POST',body:data,headers:{'Accept':'application/json'}});
-    if(res.ok){show(en?'Sent successfully ✅':'تم الإرسال بنجاح ✅',true);form.reset();}
-    else{show(en?'Submission failed ❌':'تعذّر الإرسال ❌',false);}
-  }catch{show(en?'Network error ❌':'خطأ بالشبكة ❌',false);}
+    const res = await fetch(form.action, { method:'POST', body:data, headers:{'Accept':'application/json'} });
+    if(res.ok){
+      show(isEn ? 'Sent successfully ✅' : 'تم الإرسال بنجاح ✅', true);
+      form.reset();
+    }else{
+      show(isEn ? 'Submission failed ❌' : 'تعذّر الإرسال ❌', false);
+    }
+  }catch{
+    show(isEn ? 'Network error ❌' : 'خطأ بالشبكة ❌', false);
+  }
 });
 </script>
 </body>
